manifests/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: code-server
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: code-server
    spec:
      containers:
        - env:
            - name: DOCKER_MODS
              value: linuxserver/mods:code-server-python3|linuxserver/mods:code-server-nodejs|linuxserver/mods:code-server-terraform|linuxserver/mods:code-server-zsh
            - name: PASSWORD
              value: ${ZPASSWORD}
            - name: PGID
              value: "1000"
            # - name: PROXY_DOMAIN
            #   value: codeserver.local.example.com
            - name: PUID
              value: "1000"
            - name: SUDO_PASSWORD
              value: ${ZPASSWORD}
            - name: TZ
              value: America/New_York
            - name: PORT
              value: 8446 code-server
          image: lscr.io/linuxserver/code-server:latest
          name: code-server
          ports:
            - containerPort: 8446
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /config
              name: code-server-claim0
      restartPolicy: Always
      volumes:
        - name: code-server-claim0
          persistentVolumeClaim:
            claimName: code-server-claim0
status: {}
